test/tests/compiler/5_local_variables/invalid_semantics/extra_credit/compound_invalid_lvalue.plx
pub fn main(none) i32 {
    a: i32 = 0
    -a += 1
    return a
}
